Fix scrollbar dancing (#53)
* Fix scrollbar dance

* Sneaky small fixes

--- a/packages/zudoku/src/app/main.css
+++ b/packages/zudoku/src/app/main.css
@@ -102,7 +102,7 @@
   html {
     scroll-padding-block: var(--scroll-padding);
     /* This is to prevent layout jumping when the scrollbar appears/disappears */
-    padding-left: var(--scrollbar-width);
+    @apply mr-[calc(-1*var(--scrollbar-width))] overflow-x-hidden;
   }
 
   body {
@@ -170,6 +170,16 @@
       opacity: 0;
       transform: translateY(var(--slide-offset));
     }
+  }
+
+  .scrollbar {
+    /* For Firefox */
+    scrollbar-width: thin;
+    scrollbar-color: transparent transparent;
+  }
+
+  .scrollbar:hover {
+    scrollbar-color: hsla(var(--border)) transparent;
   }
 
   .scrollbar::-webkit-scrollbar {
